--- a/src/components/RecipePage/RecipeIngredients/RecipeIngredients.module.css
+++ b/src/components/RecipePage/RecipeIngredients/RecipeIngredients.module.css
@@ -1,10 +1,10 @@
 .section {
-  margin: 20px auto;
+  margin: 0 auto;
   max-width: 375px;
+  font-family: 'Mulish', sans-serif;
 }
 
 .title {
-  font-family: 'Mulish', sans-serif;
   font-weight: 700;
   font-size: 18px;
   line-height: 133%;
@@ -26,8 +26,7 @@
   display: flex;
   align-items: center;
   gap: 16px;
-  height: 85px; 
-  /* padding: 10px; */
+  height: 85px;
   background-color: #fff;
   box-sizing: border-box;
   border-radius: 12px;
@@ -60,160 +59,67 @@
   justify-content: center;
 }
 
-.name {
-  font-family: 'Mulish', sans-serif;
+.name,
+.quantity {
   font-weight: 500;
   font-size: 14px;
   line-height: 143%;
   letter-spacing: -0.02em;
+}
+
+.name {
   color: #050505;
 }
 
 .quantity {
-  font-family: 'Mulish', sans-serif;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 143%;
-  letter-spacing: -0.02em;
   color: #7a7a7a;
 }
 
-
 @media screen and (min-width: 768px) {
   .section {
-    margin: 40px 0px 40px 0px;
+    margin: 0 0 40px;
     max-width: 768px;
   }
 
   .list {
-    display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
-    grid-auto-rows: 90px; 
+    grid-auto-rows: 90px;
   }
 
   .item {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    gap: 14px;
     height: 90px;
+    gap: 14px;
     border-radius: 15px;
-    background-color: #fff;
-    box-sizing: border-box;
   }
 
   .ingridientImg {
     width: 90px;
     height: 90px;
     padding: 15px;
-    border: 1px solid #bfbebe;
-    border-radius: 15px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-shrink: 0;
-    overflow: hidden;
   }
 
   .image {
     width: 60px;
     height: 60px;
-    object-fit: contain;
-    display: block;
   }
 
-  .indridientName {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
-  }
-
-  .name {
-    font-family: 'Mulish', sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 150%;
-    letter-spacing: -0.02em;
-    color: #050505;
-  }
-
+  .name,
   .quantity {
-    font-family: 'Mulish', sans-serif;
-    font-weight: 500;
     font-size: 16px;
     line-height: 150%;
-    letter-spacing: -0.02em;
-    color: #7a7a7a;
   }
 }
 
 @media screen and (min-width: 1440px) {
   .section {
     max-width: 1200px;
-    margin: 60px 0px 60px 0px;
+    margin: 0 0 60px;
   }
 
   .list {
-    grid-template-columns: repeat(3, 1fr); 
+    grid-template-columns: repeat(3, 1fr);
     gap: 20px;
     grid-auto-rows: 90px;
-  }
-
-  .item {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    gap: 14px;
-    height: 90px;
-    border-radius: 15px;
-    background-color: #fff;
-    box-sizing: border-box;
-  }
-
-  .ingridientImg {
-    width: 90px;
-    height: 90px;
-    padding: 15px;
-    border-radius: 15px;
-    border: 1px solid #bfbebe;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden;
-    flex-shrink: 0;
-  }
-
-  .image {
-    width: 60px;
-    height: 60px;
-    object-fit: contain;
-    display: block;
-  }
-
-  .indridientName {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
-  }
-
-  .name {
-    font-family: 'Mulish', sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 150%;
-    letter-spacing: -0.02em;
-    color: #050505;
-  }
-
-  .quantity {
-    font-family: 'Mulish', sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 150%;
-    letter-spacing: -0.02em;
-    color: #7a7a7a;
   }
 }
