--- a/src/components/RecipePage/RecipeMainInfo/RecipeMainInfo.module.css
+++ b/src/components/RecipePage/RecipeMainInfo/RecipeMainInfo.module.css
@@ -23,10 +23,9 @@
 }
 
 .tags {
-  margin-top: 20px;
   display: flex;
   gap: 8px;
-  margin-bottom: 20px;
+  margin: 20px 0;
 }
 
 .tag {
@@ -54,11 +53,10 @@
   align-items: center;
   gap: 16px;
   margin-bottom: 32px;
-  color: #bfbebe;
   font-weight: 500;
   font-size: 14px;
   line-height: 143%;
-  
+  color: #bfbebe;
 }
 
 .textLabel {
@@ -66,15 +64,9 @@
 }
 
 .avatar {
-  border-radius: 30px;
   width: 32px;
   height: 32px;
-}
-
-.label {
-  font-weight: 500;
-  font-size: 12px;
-  color: #bfbebe;
+  border-radius: 30px;
 }
 
 .authorButton {
@@ -94,18 +86,16 @@
   line-height: 143%;
   letter-spacing: -0.02em;
   color: #bfbebe;
-  background: none; 
+  background: none;
 }
-
 
 /* ====== Tablet (>=768px) ====== */
 @media screen and (min-width: 768px) {
   .image {
     margin-bottom: 40px;
   }
+
   .title {
-    font-size: 24px;
-    font-weight: 800;
     font-size: 24px;
     line-height: 117%;
   }
@@ -113,13 +103,10 @@
   .tag {
     font-size: 14px;
     line-height: 129%;
-    font-weight: 500;
     padding: 12px;
   }
 
   .description {
-    line-height: 150%;
-    font-size: 16px;
     color: #1a1a1a;
   }
 
@@ -129,7 +116,6 @@
   }
 
   .authorName {
-    font-weight: 700;
     font-size: 16px;
     line-height: 150%;
     color: #1a1a1a;
@@ -148,11 +134,6 @@
     align-items: flex-start;
     gap: 80px;
   }
-  .title {
-    font-weight: 800;
-    font-size: 24px;
-    line-height: 117%;
-  }
 
   .tag {
     font-size: 18px;
@@ -160,27 +141,20 @@
   }
 
   .description {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 150%;
     color: #1a1a1a;
   }
 
   .authorInfo {
-    font-weight: 500;
     font-size: 14px;
-    line-height: 143%;
   }
 
   .authorName {
-    font-weight: 700;
     font-size: 16px;
     line-height: 150%;
     color: #1a1a1a;
   }
 
   .avatar {
-    border-radius: 30px;
     width: 50px;
     height: 50px;
   }
