--- a/src/components/RecipePage/RecipePreparation/RecipePreparation.module.css
+++ b/src/components/RecipePage/RecipePreparation/RecipePreparation.module.css
@@ -2,14 +2,13 @@
 .preparationSection {
   width: 100%;
   max-width: 343px;
-  margin: 0 auto 40px;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   gap: 20px;
 }
 
 .title {
-  margin-top: 32px;
   font-weight: 800;
   font-size: 18px;
   line-height: 133%;
@@ -26,7 +25,6 @@
 }
 
 .favoriteBtn {
-  margin-top: 32px;
   align-self: flex-start;
   padding: 14px 20px;
   font-size: 14px;
@@ -49,8 +47,12 @@
 /* ====== Tablet (>=768px) ====== */
 @media screen and (min-width: 768px) {
   .preparationSection {
-    max-width: 100%; 
-    margin: 0 auto;
+    max-width: 100%;
+  }
+
+  .title {
+    font-size: 20px;
+    line-height: 120%;
   }
 
   .instructions {
@@ -60,40 +62,20 @@
   }
 
   .favoriteBtn {
-    border-radius: 30px;
-padding: 16px 32px;
-width: 215px;
-height: 56px;
-border: 1px solid #bfbebe;
-margin-bottom: 104px;
+    padding: 16px 32px;
+    width: 215px;
+    height: 56px;
   }
 }
 
 /* ====== Desktop (>=1440px) ====== */
 @media screen and (min-width: 1440px) {
-  .preparationSection {
-    max-width: 100%; 
-  }
-
-  .title {
-font-size: 20px;
-line-height: 120%;;
-  }
-
   .instructions {
     font-size: 18px;
   }
 
   .favoriteBtn {
-    border: 1px solid #bfbebe;
-border-radius: 30px;
-padding: 16px 32px;
-width: 215px;
-height: 56px;
-margin-bottom: 120px;
-color: #1a1a1a;
-font-weight: 700;
-/* font-size: 16px; */
-
+    color: #1a1a1a;
+    font-weight: 700;
   }
 }
